--- a/src/core/components/Spinner/spinner.css
+++ b/src/core/components/Spinner/spinner.css
@@ -7,13 +7,18 @@
   animation: spin .6s linear infinite;
 }
 
-/* Safari */
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
-
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+.DelayedSpinner {
+  animation: 0s linear 0.5s forwards makeVisible;
+  visibility: hidden;
+}
+
+@keyframes makeVisible {
+  to {
+    visibility: visible;
+  }
 }
