--- a/src/pages/binnacle/desktop/CalendarControls/CalendarControls.module.css
+++ b/src/pages/binnacle/desktop/CalendarControls/CalendarControls.module.css
@@ -21,16 +21,6 @@
   margin-right: 12px;
 }
 
-.spinner {
-  width: 30px;
-  height: 30px;
-  border: 1px solid transparent;
-  border-radius: 50%;
-  border-top: 2px solid #10069f;
-  position: absolute;
-  color: black;
-}
-
 .arrowButton {
   width: 30px;
   height: 30px;
@@ -41,4 +31,28 @@
   border: none;
   padding: 0;
   margin: 0;
+  color: black;
+}
+
+.spinner {
+  width: 30px;
+  height: 30px;
+  border: 1px solid transparent;
+  border-radius: 50%;
+  border-top: 2px solid #10069f;
+  position: absolute;
+  color: black;
+  animation: makeVisible .1s linear .4s forwards, spin .6s linear infinite;
+  visibility: hidden;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+@keyframes makeVisible {
+  to {
+    visibility: visible;
+  }
 }
